force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/tc9_et__Minimum_Pay_Rate__c.object-meta.xml
<CustomObject>
    <description>The object that holds the minimum pay rates specific to an award classification, level and interpretation rule. Information held on these records are used for Assignment Rate Pay Rate calculations.</description>
    <label>Minimum Pay Rate</label>
    <nameField>
        <label>Minimum Pay Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Minimum Pay Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>