force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_core__Calculation_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Calculation_Value__c</fullName>
    <description>Value used by the Agreements Rates Calculator during rates calculation. Combined with the calculation method, it determines the Margin/Markup Amount on the calculated Assignment Rate.</description>
    <inlineHelpText>Value used by the Agreements Rates Calculator during rates calculation. Combined with the calculation method, it determines the Margin/Markup Amount on the calculated Assignment Rate.</inlineHelpText>
    <label>Calculation Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>