force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_core__Carry_Over_Source__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Carry_Over_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags a Minimum Pay Rate record as the Carry Over Source, used by the Agreements Rates Calculator to provide the Margin/Markup amount to subsequent Carry Over Value records.</description>
    <inlineHelpText>Flags a Minimum Pay Rate record as the Carry Over Source, used by the Agreements Rates Calculator to provide the Margin/Markup amount to subsequent Carry Over Value records.</inlineHelpText>
    <label>Carry Over Source</label>
    <type>Checkbox</type>
</CustomField>