force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_core__Job_Role__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Minimum Pay Rate to the Job Role.</description>
    <inlineHelpText>Relates the Minimum Pay Rate to the Job Role.</inlineHelpText>
    <label>Job Role</label>
    <referenceTo>tc9_core__Job_Role__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>