force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Allowance_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Allowance_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pay code the minimum pay rate applies to.</description>
    <inlineHelpText>The pay code the minimum pay rate applies to.</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rate_PayCode</relationshipName>
    <type>Lookup</type>
</CustomField>