force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Annual_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Annual_Rate_Change__c</fullName>
    <description>Defines if the minimum pay rate record is annual update to exsisting minimum pay rate records.</description>
    <label>Annual Rate Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>