force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Assignment_Rate_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment_Rate_Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment Rate Template group that is applicable for this Minimum Pay Rate.</description>
    <label>Assignment Rate Template Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Assignment_Rates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates_AR_Template_Group</relationshipName>
    <type>Lookup</type>
</CustomField>