force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Award_Level__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Award_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Award Level the Minimum Pay Rate is related to.</description>
    <label>Award Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Award_Classifications_and_Levels__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Award_Level</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates (Award Level)</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates_Award_Level</relationshipName>
    <type>Lookup</type>
</CustomField>