force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculation_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Calculation Method that applies to the Margin / Markup Rate Record</description>
    <inlineHelpText>Defines the Calculation Method that applies to the Margin / Markup Rate Record</inlineHelpText>
    <label>Calculation Method</label>
    <referenceTo>tc9_et__Calculation_Method__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>