force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Casual_Loading_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Casual_Loading_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The casual loading record that applies to the minimum pay rate.</description>
    <inlineHelpText>The casual loading record that applies to the minimum pay rate.</inlineHelpText>
    <label>Casual Loading Record</label>
    <referenceTo>tc9_et__PayRate_Loading__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>