force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Create_Related_Margin_Mark_Up_Records__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Create_Related_Margin_Mark_Up_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The check box will create corresponding Margin / Mark Up records on the Rate Calculator from the values selected in this MPR record. This field will be locked upon creation of the Margin / Mark Up Records</description>
    <inlineHelpText>The check box will create corresponding Margin / Mark Up records on the Rate Calculator from the values selected in this MPR record. This field will be locked upon creation of the Margin / Mark Up Records</inlineHelpText>
    <label>Create Related Margin / Mark Up Records</label>
    <type>Checkbox</type>
</CustomField>