force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Custom_Pay_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Custom_Pay_Rate_2__c</fullName>
    <label>Custom Pay Rate 2</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>