force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expiry_Date__c</fullName>
    <description>The expiry date of the minimum pay rate record.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>