force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Has_Pending_Assignment_to_be_processed__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Pending_Assignment_to_be_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is a matching  assignment and it has to be picked up in the scheduled job</description>
    <inlineHelpText>Indicates if there is a matching  assignment and it has to be picked up in the scheduled job</inlineHelpText>
    <label>Has Pending Assignment to be processed</label>
    <type>Checkbox</type>
</CustomField>