force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The interpretation rule that is applicable for this Minimum Pay Rate.</description>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>