force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Margin_Rate__c</fullName>
    <description>The Margin Rate that will be applied in the Margin Rate 1 field on the Rate Calculator when the Calculation Method defines the calculation types as Margin.</description>
    <inlineHelpText>The Margin Rate that will be applied in the Margin Rate 1 field on the Rate Calculator when the Calculation Method defines the calculation types as Margin.</inlineHelpText>
    <label>Margin Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>