force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Rate__c</fullName>
    <description>The pay rate applicable  for the Minimum Pay Rate record.</description>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>