force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Primary_Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Minimum_Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Parent Minimum Pay Rate which holds the base pay rate for the combination of Award Classification, Level, and Interpretation Rule.</description>
    <inlineHelpText>Defines the Parent Minimum Pay Rate which holds the base pay rate for the combination of Award Classification, Level, and Interpretation Rule.</inlineHelpText>
    <label>Parent Minimum Pay Rate</label>
    <referenceTo>tc9_et__Minimum_Pay_Rate__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>