force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Primary_MPR_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_MPR_Pay_Rate__c</fullName>
    <description>Pay Rate of the Parent Minimum Pay Rate</description>
    <formula>tc9_et__Primary_Minimum_Pay_Rate__r.tc9_et__Pay_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pay Rate of the Parent Minimum Pay Rate</inlineHelpText>
    <label>Parent MPR Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>