force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the project code for the Minimum Pay Rate</description>
    <inlineHelpText>Defines the project code for the Minimum Pay Rate</inlineHelpText>
    <label>Project Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Level</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>