force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Rate_Calculator_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Template Group that the Minimum Pay Rate is related to</description>
    <inlineHelpText>Indicates the Template Group that the Minimum Pay Rate is related to</inlineHelpText>
    <label>Rate Calculator Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Rate_Calculator_Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates (Rate Calculator Template)</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>