force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Rate_Entered__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Entered__c</fullName>
    <description>Defines what type of Rate the User has entered to be used for the Rate Calculator Rate</description>
    <label>Rate Entered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Rate_Calculator_Rate_Entered_Picklists</valueSetName>
    </valueSet>
</CustomField>