force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Status__c</fullName>
    <description>Indicates whether the Minimum Pay Rate  record is currently Active, Inactive or Pending</description>
    <inlineHelpText>Indicates whether the Minimum Pay Rate  record is currently Active, Inactive or Pending</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>