force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/tc9_et__Timesheet_Activity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the timesheet activity for the Minimum Pay Rate</description>
    <inlineHelpText>Defines the timesheet activity for the Minimum Pay Rate</inlineHelpText>
    <label>Timesheet Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Timesheet_Activity_Template_Level</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Minimum Pay Rates (Timesheet Activity)</relationshipLabel>
    <relationshipName>Minimum_Pay_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>