force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/recordTypes/tc9_core__Agreement_Rate.recordType-meta.xml
<RecordType>
    <fullName>tc9_core__Agreement_Rate</fullName>
    <active>true</active>
    <description>To be used for Minimum Pay Rates related to Agreements.</description>
    <label>Agreement Rate</label>
</RecordType>